--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,14 @@
     "version":2,
     "builds":[
         {
-            "src":"*.js",
+            "src":"backend/src/index.js",
             "use":"@vercel/node"
         }
     ],
     "routes":[
         {
             "src":"/(.*)",
-            "dest":"/"
+            "dest":"backend/src/index.js"
         }
     ]
 }
